index html cleaned up

--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,12 @@
     <meta name="msapplication-TileColor" content="#00aba9">
     <meta name="theme-color" content="#ffffff">
   </head>
+
   <body>
     <header class="header">
       <div class="container header__container">
         <a href="#" class="header__logo">
-          <img src="./images/svg/logo.svg" alt="logo link image namu">
+          <img src="./images/svg/logo.svg" alt="logo link image NAMU">
         </a>
         <div class="header__tools">
           <div class="sandwich">
@@ -40,8 +41,8 @@
                  alt="arrow bottom icon"
             >
             <ul class="select__lang-list">
-              <li class="select__lang-list-item select--ua">UA</li>
-              <li class="select__lang-list-item select--en">EN</li>
+              <li class="select__lang-item select--ua">UA</li>
+              <li class="select__lang-item select--en">EN</li>
             </ul>
           </div>
         </div>
@@ -51,15 +52,15 @@
     <main class="main">
       <section class="basic">
         <div class="container basic__container">
-          <span class="basic__text text-main">10 серпня - 10 листопада</span>
-          <h2 class="basic__title text-title text-title--big">Мистецтво</h2>
+          <span class="basic__text">10 серпня - 10 листопада</span>
+          <h2 class="basic__title">Мистецтво</h2>
           <div class="basic__text-block">
-            <h2 class="basic__title text-title text-title--big">XIX - XX ст.</h2>
-            <span class="basic__descr text-main">Внесок українських митців у світову <br> культуру 19-20 ст.</span>
+            <h2 class="basic__title">XIX - XX ст.</h2>
+            <span class="basic__details">Внесок українських митців у світову <br> культуру 19-20 ст.</span>
             <a class="button" href="#">Купити квиток</a>
           </div>
           <span class="basic__date">10.08 - 10.10</span>
-          <span class="basic__img-descr text-main">Дівчина з Поділля <br>В. Тропінін</span>
+          <span class="basic__label">Дівчина з Поділля <br>В. Тропінін</span>
         </div>
       </section>
 
@@ -97,7 +98,7 @@
 
       <section class="exhibition">
         <div class="container exhibition__container">
-          <h3 class="exhibition__header text-title">Актуальні виставки</h3>
+          <h3 class="exhibition__header">Актуальні виставки</h3>
           <img class="exhibition__img exhibition__img--first"
                src="images/content/exhibition-1.png"
                alt="artifact image">
@@ -106,14 +107,14 @@
               <div class="decoration"></div>
             </div>
             <div class="exhibition__col">
-              <article class="article article--exhibition">
-                <span class="article__note article__note--exception text-main text-main--red">
+              <article class="article">
+                <span class="article__note article__note--exception">
                   11.07 - 22.09
                 </span>
-                <h4 class="article__title text-title text-title--small">
+                <h4 class="article__title">
                   Кураторська виставка “Ангели”
                 </h4>
-                <p class="article__description text-description">
+                <p class="article__details">
                   Виставковий проект «Ангели» – знакова подія для української культури і водночас наймасштабніший...
                 </p>
                 <a href="#" class="button">Купити квиток</a>
@@ -125,14 +126,14 @@
                alt="Life Triptych Love image">
           <div class="exhibition__block">
             <div class="exhibition__col">
-              <article class="article article--exhibition article--middle">
-                <span class="article__note text-main text-main--red">
+              <article class="article article--float-r">
+                <span class="article__note article__note--red">
                   Діє постійно
                 </span>
-                <h4 class="article__title text-title text-title--small">
+                <h4 class="article__title">
                   Мистецтво ХХ ст. — XXI ст.
                 </h4>
-                <p class="article__description text-description">
+                <p class="article__details">
                   Знакові роботи Алли Горської, Миколи Самокиша, Федора Кричевського та інших митців.
                 </p>
                 <a href="#" class="button">Купити квиток</a>
@@ -154,14 +155,14 @@
               </div>
             </div>
             <div class="exhibition__col">
-              <article class="article article--exhibition">
-                <span class="article__note text-main text-main--red">
+              <article class="article">
+                <span class="article__note article__note--red">
                   Діє постійно
                 </span>
-                <h4 class="article__title text-title text-title--small">
+                <h4 class="article__title">
                   Стародавнє мистецтво
                 </h4>
-                <p class="article__description text-description">
+                <p class="article__details">
                   Визначні приклади стародавнього українського іконопису та живопису
                 </p>
                 <a href="#" class="button">Купити квиток</a>
@@ -174,21 +175,21 @@
 
       <section class="events">
         <div class="container events__container">
-          <h3 class="events__header text-title">Найближчі події</h3>
+          <h3 class="events__header">Найближчі події</h3>
           <div class="events__item">
             <div class="events__wrapper">
               <div class="events__datetime">
                 <div class="events__date">14.08</div>
                 <div class="events__time">13:00</div>
               </div>
-              <article class="article article--events">
-                <span class="article__note text-main text-main--events">
+              <article class="article article--wide">
+                <span class="article__note">
                   Екскурсія
                 </span>
-                <h4 class="article__title text-title text-title--small">
+                <h4 class="article__title">
                   Кураторські екскурсії від Павла Гудімова
                 </h4>
-                <p class="article__description text-description">
+                <p class="article__details">
                   Таємниці підготовки, історії експонатів, магія дійства до і в момент вашої присутності – розгортатиметься...
                 </p>
                 <a href="#" class="button">Зареєструватись</a>
@@ -207,14 +208,14 @@
                 <div class="events__date">18.08</div>
                 <div class="events__time">14:00</div>
               </div>
-              <article class="article article--events">
-                <span class="article__note text-main text-main--events">
+              <article class="article article--wide">
+                <span class="article__note">
                   Майстер-клас
                 </span>
-                <h4 class="article__title text-title text-title--small">
+                <h4 class="article__title">
                   Подорож до Австралії
                 </h4>
-                <p class="article__description text-description">
+                <p class="article__details">
                   Цієї неділі о 14:00 на арт-мандрівників чекає останній пункт кругосвітньої подорожі - Австралія.
                 </p>
                 <a href="#" class="button">Зареєструватись</a>
@@ -229,9 +230,9 @@
       <section class="visit">
         <div class="container visit__container">
           <div class="visit__image"></div>
-          <h2 class="visit__title text-title text-title--big">Сплануйте візит до музею</h2>
+          <h2 class="visit__title">Сплануйте візит до музею</h2>
           <div class="visit__info">
-            <p class="visit__description text-main">Оберіть зручний день, зареєструйтесь на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом</p>
+            <p class="visit__details">Оберіть зручний день, зареєструйтесь на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом</p>
             <a href="#" class="button">Почати</a>
           </div>
         </div>
@@ -239,16 +240,16 @@
 
       <section class="news">
         <div class="container news__container">
-          <h3 class="news__header text-title">Новини</h3>
+          <h3 class="news__header">Новини</h3>
           <div class="news__items">
             <div class="news__item">
               <article class="article">
                 <img src="images/content/news-1.jpg"
-                     alt="winners image"
+                     alt="pictures-winners image"
                      class="article__image">
-                <span class="article__note text-main text-main--events">9 серпня 2019</span>
-                <h4 class="article__title text-title text-title--smaller">Оголошення переможця</h4>
-                <p class="article__description text-main text-main--gray">Друзі, сьогодні п'ятниця! А це означає, що час оголосити переможця розіграшу...</p>
+                <span class="article__note">9 серпня 2019</span>
+                <h4 class="article__title article__title--smallest">Оголошення переможця</h4>
+                <p class="article__details">Друзі, сьогодні п'ятниця! А це означає, що час оголосити переможця розіграшу...</p>
               </article>
             </div>
             <div class="news__item">
@@ -256,9 +257,9 @@
                 <img src="images/content/news-2.jpg"
                      alt="cat image"
                      class="article__image">
-                <span class="article__note text-main text-main--events">9 серпня 2019</span>
-                <h4 class="article__title text-title text-title--smaller">Міжнародний день котів</h4>
-                <p class="article__description text-main text-main--gray">Музей з левами не може просто так взяти і пропустити Міжнародний день котів!</p>
+                <span class="article__note">9 серпня 2019</span>
+                <h4 class="article__title article__title--smallest">Міжнародний день котів</h4>
+                <p class="article__details">Музей з левами не може просто так взяти і пропустити Міжнародний день котів!</p>
               </article>
             </div>
             <div class="news__item">
@@ -266,9 +267,9 @@
                 <img src="images/content/news-3.jpg"
                      alt="cossacks picture"
                      class="article__image">
-                <span class="article__note text-main text-main--events">9 серпня 2019</span>
-                <h4 class="article__title text-title text-title--smaller">200 років П. Кулішу</h4>
-                <p class="article__description text-main text-main--gray">Поруч із Тарасом Шевченком це найважливіша постать в українській культурі ХІХ століття...</p>
+                <span class="article__note">9 серпня 2019</span>
+                <h4 class="article__title article__title--smallest">200 років П. Кулішу</h4>
+                <p class="article__details">Поруч із Тарасом Шевченком це найважливіша постать в українській культурі ХІХ століття...</p>
               </article>
             </div>
           </div>
@@ -278,9 +279,9 @@
 
       <section class="subscribe">
         <div class="container subscribe__container">
-          <h3 class="text-title subscribe__header">Підпишіться на дайджест</h3>
+          <h3 class="subscribe__header">Підпишіться на дайджест</h3>
           <div class="subscribe__block">
-            <p class="subscribe__info text-main">Першими дізнавайтесь про новини музею та розіграші, отримуйте запрошення на події та читайте статті від кураторів</p>
+            <p class="subscribe__info">Першими дізнавайтесь про новини музею та розіграші, отримуйте запрошення на події та читайте статті від кураторів</p>
             <input class="subscribe__input"
                    type="email"
                    placeholder="e-mail">
@@ -293,15 +294,22 @@
       <div class="container footer__container">
         <div class="footer__row">
           <div class="footer__col">
-            <h4 class="footer__title text-title text-title--small">Контакти</h4>
+            <h4 class="footer__title">Контакти</h4>
             <ul class="footer__list">
-              <li class="footer__item text-main">
-                <p>Київ, <br> вул. М. Грушевського, 6</p>
+              <li class="footer__item">
+                <a class="footer__link" href="https://goo.gl/maps/HCT6wpKnSQuzj8b28">Київ, <br> вул. М. Грушевського, 6</a>
               </li>
-              <li class="footer__item text-main">
-                тел. <a class="footer__link" href="#">278-13-57</a>, <br>
-                <a class="footer__link" href="#">278-74-54</a> <br>
-                <a class="footer__link" href="#">info@namu.kiev.ua</a>
+              <li class="footer__item">
+                <div class="footer__phone">
+                  <span>тел.</span>
+                  <div class="footer__phone-num">
+                    <a class="footer__link" href="tel:+380442781357">278-13-57,</a>
+                    <a class="footer__link" href="tel:+380442787454">278-74-54</a>
+                  </div>
+                </div>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
               </li>
             </ul>
             <ul class="footer__media">
@@ -336,33 +344,33 @@
             </ul>
           </div>
           <div class="footer__col">
-            <h4 class="footer__title text-title text-title--small">Розклад роботи</h4>
+            <h4 class="footer__title">Розклад роботи</h4>
             <ul class="footer__list">
-              <li class="footer__item footer__day text-main">
+              <li class="footer__item">
                 пн<span class="footer__time">вихідний</span>
               </li>
-              <li class="footer__item footer__day text-main">
+              <li class="footer__item">
                 вт<span class="footer__time">вихідний</span>
               </li>
-              <li class="footer__item footer__day text-main">
+              <li class="footer__item">
                 ср<span class="footer__time">10:00 - 17:00</span>
               </li>
-              <li class="footer__item footer__day text-main">
+              <li class="footer__item">
                 чт<span class="footer__time">10:00 - 17:00</span>
               </li>
-              <li class="footer__item footer__day text-main">
+              <li class="footer__item">
                 пт<span class="footer__time">10:00 - 19:00</span>
               </li>
-              <li class="footer__item footer__day text-main">
+              <li class="footer__item">
                 сб<span class="footer__time">10:00 - 18:00</span>
               </li>
-              <li class="footer__item footer__day text-main">
+              <li class="footer__item">
                 нд<span class="footer__time">10:00 - 17:00</span>
               </li>
             </ul>
           </div>
           <div class="footer__col">
-            <h4 class="footer__title text-title text-title--small">Членські програми</h4>
+            <h4 class="footer__title">Членські програми</h4>
             <ul class="footer__list">
               <li class="footer__item">
                 <a class="footer__link" href="#">Зробити разовий внесок</a>
@@ -376,7 +384,7 @@
             </ul>
           </div>
           <div class="footer__col">
-            <h4 class="footer__title text-title text-title--small">Про нас</h4>
+            <h4 class="footer__title">Про нас</h4>
             <ul class="footer__list">
               <li class="footer__item">
                 <a class="footer__link" href="#">Історія</a>
