--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
                 <div class="events__time">13:00</div>
               </div>
               <article class="article article--wide">
-                <span class="article__note">
+                <span class="article__note article__note--small">
                   Екскурсія
                 </span>
                 <h4 class="article__title">
@@ -209,7 +209,7 @@
                 <div class="events__time">14:00</div>
               </div>
               <article class="article article--wide">
-                <span class="article__note">
+                <span class="article__note article__note--small">
                   Майстер-клас
                 </span>
                 <h4 class="article__title">
@@ -247,7 +247,7 @@
                 <img src="images/content/news-1.jpg"
                      alt="pictures-winners image"
                      class="article__image">
-                <span class="article__note">9 серпня 2019</span>
+                <span class="article__note article__note--small">9 серпня 2019</span>
                 <h4 class="article__title article__title--smallest">Оголошення переможця</h4>
                 <p class="article__details">Друзі, сьогодні п'ятниця! А це означає, що час оголосити переможця розіграшу...</p>
               </article>
@@ -257,7 +257,7 @@
                 <img src="images/content/news-2.jpg"
                      alt="cat image"
                      class="article__image">
-                <span class="article__note">9 серпня 2019</span>
+                <span class="article__note article__note--small">9 серпня 2019</span>
                 <h4 class="article__title article__title--smallest">Міжнародний день котів</h4>
                 <p class="article__details">Музей з левами не може просто так взяти і пропустити Міжнародний день котів!</p>
               </article>
@@ -267,7 +267,7 @@
                 <img src="images/content/news-3.jpg"
                      alt="cossacks picture"
                      class="article__image">
-                <span class="article__note">9 серпня 2019</span>
+                <span class="article__note article__note--small">9 серпня 2019</span>
                 <h4 class="article__title article__title--smallest">200 років П. Кулішу</h4>
                 <p class="article__details">Поруч із Тарасом Шевченком це найважливіша постать в українській культурі ХІХ століття...</p>
               </article>
