--- a/src/index.html
+++ b/src/index.html
@@ -34,14 +34,20 @@
             <div class="sandwich__button"></div>
           </div>
           <div class="header__lang select">
-            <div class="select__lang">UA</div>
+            <div class="select__lang">
+              UA
+            </div>
             <img class="select__icon"
                  src="./images/svg/arrow.svg"
                  alt="arrow bottom icon"
             >
             <ul class="select__lang-list">
-              <li class="select__lang-item select--ua">UA</li>
-              <li class="select__lang-item select--en">EN</li>
+              <li class="select__lang-item select--ua">
+                UA
+              </li>
+              <li class="select__lang-item select--en">
+                EN
+              </li>
             </ul>
           </div>
         </div>
@@ -51,15 +57,29 @@
     <main class="main">
       <section class="basic">
         <div class="container basic__container">
-          <span class="basic__text">10 серпня - 10 листопада</span>
-          <h2 class="basic__title">Мистецтво</h2>
+          <span class="basic__text">
+            10 серпня - 10 листопада
+          </span>
+          <h2 class="basic__title">
+            Мистецтво
+          </h2>
           <div class="basic__text-block">
-            <h2 class="basic__title">XIX - XX ст.</h2>
-            <span class="basic__details">Внесок українських митців у світову <br> культуру 19-20 ст.</span>
-            <a class="button" href="#">Купити квиток</a>
+            <h2 class="basic__title">
+              XIX - XX ст.
+            </h2>
+            <span class="basic__details">
+              Внесок українських митців у світову <br> культуру 19-20 ст.
+            </span>
+            <a class="button" href="#">
+              Купити квиток
+            </a>
           </div>
-          <span class="basic__date">10.08 - 10.10</span>
-          <span class="basic__label">Дівчина з Поділля <br>В. Тропінін</span>
+          <span class="basic__date">
+            10.08 - 10.10
+          </span>
+          <span class="basic__label">
+            Дівчина з Поділля <br>В. Тропінін
+          </span>
         </div>
       </section>
 
@@ -68,36 +88,52 @@
           <div class="menu__info info">
             <div class="info__block">
               Розклад сьогодні:
-              <span class="info__details">12:00 - 19:00</span>
+              <span class="info__details">
+                12:00 - 19:00
+              </span>
             </div>
             <div class="info__block">
               Адреса:
-              <a class="info__details" href="https://goo.gl/maps/HCT6wpKnSQuzj8b28">Київ, вул. М. Грушевського, 6</a>
+              <a class="info__details" href="https://goo.gl/maps/HCT6wpKnSQuzj8b28">
+                Київ, вул. М. Грушевського, 6
+              </a>
             </div>
           </div>
           <nav class="menu__nav">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a href="#" class="menu__link">Спланувати візит</a>
+                <a href="#" class="menu__link">
+                  Спланувати візит
+                </a>
               </li>
               <li class="menu__list-item">
-                <a href="#" class="menu__link">Виставки та події</a>
+                <a href="#" class="menu__link">
+                  Виставки та події
+                </a>
               </li>
               <li class="menu__list-item">
-                <a href="#" class="menu__link">Колекція</a>
+                <a href="#" class="menu__link">
+                  Колекція
+                </a>
               </li>
             </ul>
           </nav>
           <div class="menu__buttons">
-            <a href="#" class="button">Купити квиток</a>
-            <a href="#" class="button button--transparent">Стати членом</a>
+            <a href="#" class="button">
+              Купити квиток
+            </a>
+            <a href="#" class="button button--transparent">
+              Стати членом
+            </a>
           </div>
         </div>
       </section>
 
       <section class="exhibition">
         <div class="container exhibition__container">
-          <h3 class="exhibition__header">Актуальні виставки</h3>
+          <h3 class="exhibition__header">
+            Актуальні виставки
+          </h3>
           <img class="exhibition__img exhibition__img--first"
                src="images/content/exhibition-1.png"
                alt="artifact image">
@@ -141,7 +177,9 @@
                 <p class="article__details article__details--alternative article__details--exception">
                   Знакові роботи А. Горської, М. Самокиша, Ф. Кричевського та інших митців.
                 </p>
-                <a href="#" class="button exhibition__button">Купити квиток</a>
+                <a href="#" class="button exhibition__button">
+                  Купити квиток
+                </a>
               </article>
             </div>
             <div class="exhibition__col exhibition__col--second">
@@ -177,22 +215,32 @@
               </article>
             </div>
           </div>
-          <a href="#" class="section-button">Архів виставок</a>
+          <a href="#" class="section-button">
+            Архів виставок
+          </a>
         </div>
       </section>
 
       <section class="events">
         <div class="container events__container">
-          <h3 class="events__header">Найближчі події</h3>
+          <h3 class="events__header">
+            Найближчі події
+          </h3>
           <div class="events__item">
             <div class="events__wrapper">
               <div class="events__datetime">
-                <div class="events__date">14.08</div>
-                <div class="events__time">13:00</div>
+                <div class="events__date">
+                  14.08
+                </div>
+                <div class="events__time">
+                  13:00
+                </div>
               </div>
               <article class="article article--wide">
                 <div class="events__datatime-small">
-                  <span class="events__datatime-mini">14 серпня, 13:00</span>
+                  <span class="events__datatime-mini">
+                    14 серпня, 13:00
+                  </span>
                   <span class="article__note article__note--small">
                     Екскурсія
                   </span>
@@ -203,7 +251,9 @@
                 <p class="article__details">
                   Таємниці підготовки, історії експонатів, магія дійства до і в момент вашої присутності – розгортатиметься...
                 </p>
-                <a href="#" class="button">Зареєструватись</a>
+                <a href="#" class="button">
+                  Зареєструватись
+                </a>
               </article>
             </div>
             <img class="events__image"
@@ -216,12 +266,18 @@
                  alt="event image">
             <div class="events__wrapper">
               <div class="events__datetime">
-                <div class="events__date">18.08</div>
-                <div class="events__time">14:00</div>
+                <div class="events__date">
+                  18.08
+                </div>
+                <div class="events__time">
+                  14:00
+                </div>
               </div>
               <article class="article article--wide">
                 <div class="events__datatime-small">
-                  <span class="events__datatime-mini">18 серпня, 14:00</span>
+                  <span class="events__datatime-mini">
+                    18 серпня, 14:00
+                  </span>
                   <span class="article__note article__note--small">
                     Майстер-клас
                   </span>
@@ -232,38 +288,56 @@
                 <p class="article__details">
                   Цієї неділі о 14:00 на арт-мандрівників чекає останній пункт кругосвітньої подорожі - Австралія.
                 </p>
-                <a href="#" class="button">Зареєструватись</a>
+                <a href="#" class="button">
+                  Зареєструватись
+                </a>
               </article>
 
             </div>
           </div>
-          <a href="#" class="section-button">Календар подій</a>
+          <a href="#" class="section-button">
+            Календар подій
+          </a>
         </div>
       </section>
 
       <section class="visit">
         <div class="container visit__container">
           <div class="visit__image"></div>
-          <h2 class="visit__title">Сплануйте візит до музею</h2>
+          <h2 class="visit__title">
+            Сплануйте візит до музею
+          </h2>
           <div class="visit__info">
-            <p class="visit__details">Оберіть зручний день, зареєструйтесь на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом</p>
-            <a href="#" class="button">Почати</a>
+            <p class="visit__details">
+              Оберіть зручний день, зареєструйтесь на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом
+            </p>
+            <a href="#" class="button">
+              Почати
+            </a>
           </div>
         </div>
       </section>
 
       <section class="news">
         <div class="container news__container">
-          <h3 class="news__header">Новини</h3>
+          <h3 class="news__header">
+            Новини
+          </h3>
           <div class="news__items">
             <div class="news__item">
               <article class="article">
                 <img src="images/content/news-1.jpg"
                      alt="pictures-winners image"
                      class="article__image">
-                <span class="article__note article__note--small">9 серпня 2019</span>
-                <h4 class="article__title article__title--smallest">Оголошення переможця</h4>
-                <p class="article__details">Друзі, сьогодні п'ятниця! А це означає, що час оголосити переможця розіграшу...</p>
+                <span class="article__note article__note--small">
+                  9 серпня 2019
+                </span>
+                <h4 class="article__title article__title--smallest">
+                  Оголошення переможця
+                </h4>
+                <p class="article__details">
+                  Друзі, сьогодні п'ятниця! А це означає, що час оголосити переможця розіграшу...
+                </p>
               </article>
             </div>
             <div class="news__item">
@@ -281,19 +355,29 @@
                 <img src="images/content/news-3.jpg"
                      alt="cossacks picture"
                      class="article__image">
-                <span class="article__note article__note--small">9 серпня 2019</span>
-                <h4 class="article__title article__title--smallest">200 років П. Кулішу</h4>
-                <p class="article__details">Поруч із Тарасом Шевченком це найважливіша постать в українській культурі ХІХ століття...</p>
+                <span class="article__note article__note--small">
+                  9 серпня 2019
+                </span>
+                <h4 class="article__title article__title--smallest">
+                  200 років П. Кулішу
+                </h4>
+                <p class="article__details">
+                  Поруч із Тарасом Шевченком це найважливіша постать в українській культурі ХІХ століття...
+                </p>
               </article>
             </div>
           </div>
-          <a href="#" class="section-button">Усі новини</a>
+          <a href="#" class="section-button">
+            Усі новини
+          </a>
         </div>
       </section>
 
       <section class="subscribe">
         <div class="container subscribe__container">
-          <h3 class="subscribe__header">Підпишіться на дайджест</h3>
+          <h3 class="subscribe__header">
+            Підпишіться на дайджест
+          </h3>
           <div class="subscribe__block">
             <p class="subscribe__info">
               Першими дізнавайтесь про новини музею та розіграші, отримуйте запрошення на події та читайте статті від кураторів
@@ -319,22 +403,32 @@
       <div class="container footer__container">
         <div class="footer__row">
           <div class="footer__col">
-            <h4 class="footer__title">Контакти</h4>
+            <h4 class="footer__title">
+              Контакти
+            </h4>
             <ul class="footer__list">
               <li class="footer__item">
-                <a class="footer__link" href="https://goo.gl/maps/HCT6wpKnSQuzj8b28">Київ, <br> вул. М. Грушевського, 6</a>
+                <a class="footer__link" href="https://goo.gl/maps/HCT6wpKnSQuzj8b28">
+                  Київ, <br> вул. М. Грушевського, 6
+                </a>
               </li>
               <li class="footer__item">
                 <div class="footer__phone">
                   <span>тел.</span>
                   <div class="footer__phone-num">
-                    <a class="footer__link" href="tel:+380442781357">278-13-57,</a>
-                    <a class="footer__link" href="tel:+380442787454">278-74-54</a>
+                    <a class="footer__link" href="tel:+380442781357">
+                      278-13-57,
+                    </a>
+                    <a class="footer__link" href="tel:+380442787454">
+                      278-74-54
+                    </a>
                   </div>
                 </div>
               </li>
               <li class="footer__item">
-                <a class="footer__link" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+                <a class="footer__link" href="mailto:info@namu.kiev.ua">
+                  info@namu.kiev.ua
+                </a>
               </li>
             </ul>
             <ul class="footer__media">
@@ -381,7 +475,9 @@
             </ul>
           </div>
           <div class="footer__col">
-            <h4 class="footer__title">Розклад роботи</h4>
+            <h4 class="footer__title">
+              Розклад роботи
+            </h4>
             <ul class="footer__list">
               <li class="footer__item">
                 пн<span class="footer__time">вихідний</span>
@@ -407,40 +503,62 @@
             </ul>
           </div>
           <div class="footer__col">
-            <h4 class="footer__title">Членські програми</h4>
+            <h4 class="footer__title">
+              Членські програми
+            </h4>
             <ul class="footer__list">
               <li class="footer__item">
-                <a class="footer__link" href="#">Зробити разовий внесок</a>
+                <a class="footer__link" href="#">
+                  Зробити разовий внесок
+                </a>
               </li>
               <li class="footer__item">
-                <a class="footer__link" href="#">Індивідуальна</a>
+                <a class="footer__link" href="#">
+                  Індивідуальна
+                </a>
               </li>
               <li class="footer__item">
-                <a class="footer__link" href="#">Корпоративна</a>
+                <a class="footer__link" href="#">
+                  Корпоративна
+                </a>
               </li>
             </ul>
           </div>
           <div class="footer__col">
-            <h4 class="footer__title">Про нас</h4>
+            <h4 class="footer__title">
+              Про нас
+            </h4>
             <ul class="footer__list">
               <li class="footer__item">
-                <a class="footer__link" href="#">Історія</a>
+                <a class="footer__link" href="#">
+                  Історія
+                </a>
               </li>
               <li class="footer__item">
-                <a class="footer__link" href="#">Обличчя музею</a>
+                <a class="footer__link" href="#">
+                  Обличчя музею
+                </a>
               </li>
               <li class="footer__item">
-                <a class="footer__link" href="#">Вакансії</a>
+                <a class="footer__link" href="#">
+                  Вакансії
+                </a>
               </li>
               <li class="footer__item">
-                <a class="footer__link" href="#">Новини</a>
+                <a class="footer__link" href="#">
+                  Новини
+                </a>
               </li>
             </ul>
           </div>
         </div>
         <div class="footer__bottom">
-          <span>© 2010 — 2021</span>
-          <a class="footer__link" href="#">Privacy — Terms</a>
+          <span>
+            © 2010 — 2021
+          </span>
+          <a class="footer__link" href="#">
+            Privacy — Terms
+          </a>
         </div>
         <a class="footer__button" href="#">
           <img class="footer__button-image"
