--- a/src/index.html
+++ b/src/index.html
@@ -345,9 +345,15 @@
                 <img src="images/content/news-2.jpg"
                      alt="cat image"
                      class="article__image">
-                <span class="article__note article__note--small">9 серпня 2019</span>
-                <h4 class="article__title article__title--smallest">Міжнародний день котів</h4>
-                <p class="article__details">Музей з левами не може просто так взяти і пропустити Міжнародний день котів!</p>
+                <span class="article__note article__note--small">
+                  9 серпня 2019
+                </span>
+                <h4 class="article__title article__title--smallest">
+                  Міжнародний день котів
+                </h4>
+                <p class="article__details">
+                  Музей з левами не може просто так взяти і пропустити Міжнародний день котів!
+                </p>
               </article>
             </div>
             <div class="news__item">
