alt attrs fixed

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <header class="header">
       <div class="container header__container">
         <a href="#" class="header__logo">
-          <img src="./images/svg/logo.svg" alt="logo link image NAMU">
+          <img src="./images/svg/logo.svg" alt="логотип НАМУ посилання іконка">
         </a>
         <div class="header__tools">
           <div class="sandwich">
@@ -39,7 +39,7 @@
             </div>
             <img class="select__icon"
                  src="./images/svg/arrow.svg"
-                 alt="arrow bottom icon"
+                 alt="стрілка вниз іконка"
             >
             <ul class="select__lang-list">
               <li class="select__lang-item select--ua">
@@ -136,7 +136,7 @@
           </h3>
           <img class="exhibition__img exhibition__img--first"
                src="images/content/exhibition-1.png"
-               alt="artifact image">
+               alt="скульптура фото">
           <div class="exhibition__block">
             <div class="exhibition__col exhibition__col--first">
               <div class="decoration"></div>
@@ -161,7 +161,7 @@
           </div>
           <img class="exhibition__img exhibition__img--second"
                src="images/content/exhibition-2.png"
-               alt="Life Triptych Love image">
+               alt="життя триптих любов картина">
           <div class="exhibition__block">
             <div class="exhibition__col">
               <article class="article article--float-r">
@@ -194,7 +194,7 @@
                 <div class="decoration__text decoration__text--second"></div>
                 <img class="exhibition__img exhibition__img--third"
                      src="images/content/exhibition-3.png"
-                     alt="Cossack Mamay image">
+                     alt="Козак Мамай картина">
               </div>
             </div>
             <div class="exhibition__col exhibition__col--second">
@@ -258,12 +258,12 @@
             </div>
             <img class="events__image"
                  src="images/content/events-1.jpg"
-                 alt="event image">
+                 alt="Павло Гудімов фото">
           </div>
           <div class="events__item">
             <img class="events__image"
                  src="images/content/events-2.jpg"
-                 alt="event image">
+                 alt="Музей австралія жінка фото">
             <div class="events__wrapper">
               <div class="events__datetime">
                 <div class="events__date">
@@ -327,7 +327,7 @@
             <div class="news__item">
               <article class="article">
                 <img src="images/content/news-1.jpg"
-                     alt="pictures-winners image"
+                     alt="Три картини фото переможці конкурсу"
                      class="article__image">
                 <span class="article__note article__note--small">
                   9 серпня 2019
@@ -343,7 +343,7 @@
             <div class="news__item">
               <article class="article">
                 <img src="images/content/news-2.jpg"
-                     alt="cat image"
+                     alt="Кіт дитяча мальованка"
                      class="article__image">
                 <span class="article__note article__note--small">
                   9 серпня 2019
@@ -359,7 +359,7 @@
             <div class="news__item">
               <article class="article">
                 <img src="images/content/news-3.jpg"
-                     alt="cossacks picture"
+                     alt="Козаки картина"
                      class="article__image">
                 <span class="article__note article__note--small">
                   9 серпня 2019
@@ -397,7 +397,7 @@
               <a href="#"
                  id="subscribe__button"
                  class="subscribe__button">
-                <img src="./images/svg/arrow-big.svg" alt="arrow icon button">
+                <img src="./images/svg/arrow-big.svg" alt="стрілка вправо іконка кнопка">
               </a>
             </div>
           </div>
@@ -445,7 +445,7 @@
                    rel="noopener">
                   <img class="footer__icon"
                        src="./images/svg/facebook.svg"
-                       alt="facebook link icon">
+                       alt="facebook посилання іконка">
                 </a>
               </li>
               <li class="footer__item">
@@ -455,7 +455,7 @@
                    rel="noopener">
                   <img class="footer__icon"
                        src="./images/svg/twitter.svg"
-                       alt="twitter link icon">
+                       alt="twitter посилання іконка">
                 </a>
               </li>
               <li class="footer__item">
@@ -465,7 +465,7 @@
                    rel="noopener">
                   <img class="footer__icon"
                        src="./images/svg/telegram.svg"
-                       alt="telegram link icon">
+                       alt="telegram посилання іконка">
                 </a>
               </li>
               <li class="footer__item">
@@ -475,7 +475,7 @@
                    rel="noopener">
                   <img class="footer__icon"
                        src="./images/svg/instagram.svg"
-                       alt="instagram link icon">
+                       alt="instagram посилання іконка">
                 </a>
               </li>
             </ul>
@@ -569,7 +569,7 @@
         <a class="footer__button" href="#">
           <img class="footer__button-image"
                src="./images/svg/arrow-big.svg"
-               alt="arrow button icon">
+               alt="стрілка вверх іконка кнопка">
         </a>
       </div>
     </footer>
