lang select displays on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
           <img src="./images/svg/logo.svg" alt="логотип НАМУ посилання іконка">
         </a>
         <div class="header__tools">
-          <div class="sandwich">
+          <div class="header__sandwich sandwich">
             <div class="sandwich__button"></div>
           </div>
           <div class="header__lang select">
