--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,9 @@
                 <p class="article__details article__details--alternative">
                   Виставковий проект «Ангели» – знакова подія для української культури...
                 </p>
-                <a href="#" class="button exhibition__button">Купити квиток</a>
+                <a href="#" class="button exhibition__button">
+                  Купити квиток
+                </a>
               </article>
             </div>
           </div>
@@ -211,7 +213,9 @@
                 <p class="article__details article__details--alternative">
                   Визначні приклади стародавнього українського іконопису та...
                 </p>
-                <a href="#" class="button exhibition__button">Купити квиток</a>
+                <a href="#" class="button exhibition__button">
+                  Купити квиток
+                </a>
               </article>
             </div>
           </div>
